plugins {
    id "com.github.johnrengelman.shadow" version "5.2.0"
}

apply plugin: 'java'
sourceCompatibility = 1.11
targetCompatibility = 1.11

allprojects {
    repositories {
        jcenter()
    }
}

jar {
  manifest {
    attributes(
      'Main-Class': 'lorikeet.Main'
    )
  }
}

dependencies {
    implementation "org.pcollections:pcollections:3.1.3"
    implementation "io.undertow:undertow-core:2.0.29.Final"
    implementation "javax.ws.rs:javax.ws.rs-api:2.1.1"

    testCompile "junit:junit:4.4"
    testCompile "org.assertj:assertj-core:3.11.1"
}

//tasks.withType(JavaCompile) {
//    options.compilerArgs += "--enable-preview"
//}
//
//tasks.withType(Test) {
//    jvmArgs += "--enable-preview"
//}
//
//tasks.withType(JavaExec) {
//    jvmArgs += '--enable-preview'
//}